New:    -Added Reset button for testing purposes    -Added a "forced disconnection" handlig for client, returning back to splash     screen