@@ -5,7 +5,6 @@ import java.io.File;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.util.HashMap;
-import java.util.Locale;
 import java.util.Map;
 
 public class Model implements ModelInterface {
@@ -119,9 +118,6 @@ public class Model implements ModelInterface {
 	private void createKeyStore(String name, String alias, String password) {
 		try {
 
-			String language = Locale.getDefault().getLanguage();
-
-			File certificate;
 			String path = System.getProperty("user.dir") + "/" + name;
 			String nameCertificate;
 			String confirm = "";
@@ -131,27 +127,15 @@ public class Model implements ModelInterface {
 
 			if (System.getProperty("os.name").contains("Windows")) {
 				nameCertificate = path + "Certificate.bat";
-				if (language.equals("it")) {
-					confirm = "si";
-				} else {
-					confirm = "yes";
-				}
+				confirm = "si";
 			} else {
 				nameCertificate = path + "Certificate.sh";
-				if (language.equals("it")) {
-					confirm = "s";
-				} else {
-					confirm = "y";
-				}
+				confirm = "s";
 			}
 
-			certificate = new File(nameCertificate);
-			certificate.setExecutable(true);
-			output = new FileOutputStream(certificate);
-
+			output = new FileOutputStream(nameCertificate);
 			stdout = new DataOutputStream(output);
 			// codice per la creazione di un certificato
-
 			stdout.write("@echo off\n".getBytes());
 			stdout.write("cd ".getBytes());
 			stdout.write(System.getProperty("java.home").getBytes());
@@ -188,9 +172,11 @@ public class Model implements ModelInterface {
 			if (System.getProperty("os.name").contains("Windows")) {
 				Runtime.getRuntime().exec(nameCertificate).waitFor();
 			} else {
-				Runtime.getRuntime()
-						.exec(new String[] { "/bin/sh", "-c", nameCertificate })
-						.waitFor();
+				File a=new File(nameCertificate);
+				a.setExecutable(true);
+				
+				Runtime.getRuntime().exec(
+						new String[] { "/bin/sh", "-c", nameCertificate }).waitFor();
 			}
 
 		} catch (IOException e) {
